--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,25 @@
-Flask==3.0.3
+annotated-types==0.7.0
+blinker==1.9.0
+certifi==2024.12.14
+click==8.1.8
+dnspython==2.7.0
+Flask==3.1.0
+Flask-Cors==5.0.0
+Flask-PyMongo==2.3.0
+itsdangerous==2.2.0
+Jinja2==3.1.5
+MarkupSafe==3.0.2
+marshmallow==3.26.0
+numpy==2.2.2
+packaging==24.2
+pandas==2.2.3
+pydantic==2.10.6
+pydantic_core==2.27.2
+pymongo==4.10.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
+six==1.17.0
+typing_extensions==4.12.2
+tzdata==2025.1
+Werkzeug==3.1.3
